--- a/style.css
+++ b/style.css
@@ -43,3 +43,8 @@ button {
   background-image: linear-gradient(#fecc4c, #ffac33);
   border: 3px solid #feac32;
 }
+
+#image {
+  text-align: center
+
+}
